--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <!-- Contact Section Design -->
     <section class="kontakt" id="kontakt">
-        <h2 class="heading">Kontaktujte <span>Mě!</span></h2>
+        <h2 class="heading">Kontaktujte <span>Mne!</span></h2>
 
         <form action="#">
             <div class="input-box">
