--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          <div class="oMe-content">
             <h2 class="heading">O <span>Mě</span></h2>
             <h3>Frontend Developer</h3>
-            <p>Jsem vášnivý frontend developer s očima pro detail a láskou k tvorbě moderních webových stránek. S pečlivým přístupem kódování a schopností překládat designové koncepty do funkčních uživatelských rozhraní se snažím vytvářet jedinečné a esteticky příjemné webové stránky. S využitím nejnovějších technologií jako HTML, CSS a JavaScript se zaměřuji na responzivní design, optimalizaci pro rychlost a uživatelskou přívětivost. Moje cílem je přinést hodnotu klientům tím, že vytvářím stránky, které nejenom poutají pozornost, ale také poskytují vynikající uživatelský zážitek. Jsem připravený s vámi spolupracovat a pomoci vám přeměnit vaše nápady do funkční reality.</p>
+            <p>Jsem vášnivý frontend developer s očima pro detail a láskou k tvorbě moderních webových stránek. S pečlivým přístupem kódování a schopností překládat designové koncepty do funkčních uživatelských rozhraní se snažím vytvářet jedinečné a esteticky příjemné webové stránky. S využitím nejnovějších technologií jako HTML, CSS a JavaScript se zaměřuji na responzivní design, optimalizaci pro rychlost a uživatelskou přívětivost. Mým cílem je přinést hodnotu klientům tím, že vytvářím stránky, které nejenom poutají pozornost, ale také poskytují vynikající uživatelský zážitek. Jsem připravený s vámi spolupracovat a pomoci vám přeměnit vaše nápady do funkční reality.</p>
             <!-- <a href="#" class="btn">Zobrazit více</a> -->
          </div>
     </section>
