--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Service Section Design -->
     <section class="sluzby" id="sluzby">
-        <h2 class="heading">Moje <span>Služby</span></h2>
+        <h2 class="heading">Mé <span>Služby</span></h2>
 
         <div class="sluzby-container">
             <div class="sluzby-box">
