pujcovna petrvald added

--- a/index.html
+++ b/index.html
@@ -91,56 +91,11 @@
 
          <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="./images/weatherApp-project.png" alt="">
+                <img src="./images/pujcovna-petrvald.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Design Webu</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, nam.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a> 
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="./images/weatherApp-project.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Design Webu</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, nam.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a> 
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="./images/weatherApp-project.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Design Webu</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, nam.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a> 
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="./images/weatherApp-project.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Design Webu</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, nam.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a> 
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="./images/weatherApp-project.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Design Webu</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, nam.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a> 
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="./images/weatherApp-project.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Design Webu</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, nam.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a> 
+                    <h4>Půjčovna Petřvald pomocí služby WEBNODE</h4>
+                    <p>Díky uživatelskému rozhraní, které v budoucnu klientovi bude nápomocné k vlastnímu tvoření dalšího obsahu byl vytvořen web ve webovém rozhraní WEBNODE.</p>
+                    <a href="https://www.pujcovna-petrvald.cz"><i class='bx bx-link-external'></i></a> 
                 </div>
             </div>
          </div>
