dodelan weather app

--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
                     <a href="https://www.pujcovna-petrvald.cz"><i class='bx bx-link-external'></i></a> 
                 </div>
             </div>
+            <div class="portfolio-box">
+                <img src="./images/weatherApp-project.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Jednoduchá aplikace na počasí</h4>
+                    <p>Tahle aplikace byla vytvořena klasicky pomocí HTML,CSS, .JS a také jsem si zde poprvé použil znalosti API</p>
+                    <a href="https://malyrudy.github.io/Weather-APP-Using-API-HTML-CSS-Javascript/"><i class='bx bx-link-external'></i></a> 
+                </div>
+            </div>
          </div>
     </section>
 
