--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Lukas Rucky - webový designér</title>
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="./images/logo_L_modra.png" type="image/x-icon">
+    <meta name="description" content="Výuka snowboardingu, longboardingu a inline bruslení v Ostravě - rychle, efektivně, bezpečně a zábavně. Pořádáme akce, pobyty, závody a další, přidejte se k nám!">
+    <meta name="keywords" content="škola longboardingu, bruslení a snowboardingu Ostrava">
 </head>
 <body>
     <!-- Header Design -->
