--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="./images/logo_L_modra.png" type="image/x-icon">
-    <meta name="description" content="Výuka snowboardingu, longboardingu a inline bruslení v Ostravě - rychle, efektivně, bezpečně a zábavně. Pořádáme akce, pobyty, závody a další, přidejte se k nám!">
-    <meta name="keywords" content="škola longboardingu, bruslení a snowboardingu Ostrava">
+    <meta name="description" content="Jsem váš partner pro profesionální webový vývoj a tvorbu moderních, funkčních a atraktivních webových stránek. S pečlivou pozorností k detailům a širokým spektrem technických znalostí vytvářím weby, které nejenže splňují vaše potřeby a očekávání, ale také posilují vaši online přítomnost a pomáhají vám dosáhnout vašich cílů na internetu.">
+    <meta name="keywords" content="Tvorba webových stránek na míru, webové stránky cena, webové stránky na míru, Lukas Rucky, Lukáš Rucký">
 </head>
 <body>
     <!-- Header Design -->
