form commented, facturation details added

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="./images/logo_L_modra.png" type="image/x-icon">
     <meta name="description" content="Jsem váš partner pro profesionální webový vývoj a tvorbu moderních, funkčních a atraktivních webových stránek. S pečlivou pozorností k detailům a širokým spektrem technických znalostí vytvářím weby, které nejenže splňují vaše potřeby a očekávání, ale také posilují vaši online přítomnost a pomáhají vám dosáhnout vašich cílů na internetu.">
-    <meta name="keywords" content="Tvorba webových stránek na míru, webové stránky cena, webové stránky na míru, Lukas Rucky, Lukáš Rucký">
+    <meta name="keywords" content="Tvorba webových stránek na míru, webové stránky cena, webové stránky na míru, Lukas Rucky, Lukáš Rucký, Lukáš Rucký webové stránky, Lukáš Rucký - Tvorba webových stránek">
 </head>
 <body>
     <!-- Header Design -->
     <header class="header">
         <!-- <a href="#" class="logo">Portfolio</a> -->
-        <a href="#" class="logo"><img src="./images/logo_modra.png" alt=""></a>
+        <a href="./index.html" class="logo"><img src="./images/logo_modra.png" alt="Lukáš Rucký - Tvorba webových stránek"></a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
@@ -32,7 +32,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Ahoj, jmenuji se</h3>
-            <h1>Lukáš Rucký</h1>
+            <h1>Lukáš Rucký <span>Webový designér</span></h1>
             <h3 class="written-text">A jsem <span class="multiple-text"></span></h3>
             
             <div class="social-media">
@@ -44,14 +44,14 @@
             <!-- <a href="#" class="btn">Stáhnout CV</a> -->
         </div>
         <div class="home-img">
-            <img src="./images/lukas.jpeg" alt="">
+            <img src="./images/lukas.jpeg" alt="Lukáš Rucký - Tvorba webových stránek">
         </div>
     </section>
 
     <!-- About Section Design -->
     <section class="oMe" id="oMe">
          <div class="oMe-img">
-            <img src="./images/lukas.jpeg" alt="">
+            <img src="./images/lukas.jpeg" alt="Lukáš Rucký - Tvorba webových stránek">
          </div>
 
          <div class="oMe-content">
@@ -105,7 +105,7 @@
 
          <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="./images/pujcovna-petrvald.png" alt="">
+                <img src="./images/pujcovna-petrvald.png" alt="Půjčovna Petřvald - Poslední projekty">
                 <h3>Půjčovna Petřvald</h3>
                 <a href="https://www.pujcovna-petrvald.cz" target="_blank" class="btn">Zobrazit web</a>
             </div>
@@ -117,7 +117,7 @@
     <section class="kontakt" id="kontakt">
         <h2 class="heading">Kontaktujte <span>Mne!</span></h2>
 
-        <form action="https://formsubmit.co/ruckylukas@seznam.cz" method="POST">
+        <!-- <form action="https://formsubmit.co/ruckylukas@seznam.cz" method="POST">
             <div class="input-box">
                 <input type="text" placeholder="Celé jméno" name="email" required>
                 <input type="email" placeholder="Emailová adresa" name="email" required>
@@ -130,8 +130,17 @@
             </div>
             <textarea name="" id="" cols="30" rows="10" name="textarea" required></textarea>
             <input type="submit" value="Poslat Zprávu" class="btn">
-        </form>
-        <h3>Nebo na tel. <span><a href="tel:+420777469437">+420 777 469 437</a></span></h3>
+        </form> -->
+        <h3 class="email-link contact-link">email: <a href="mailto:ruckylukas@seznam.cz">ruckylukas@seznam.cz</a></h3>
+        <h3 class="contact-link">tel.: <span><a href="tel:+420777469437">+420 777 469 437</a></span></h3>
+
+        <ul class="kontakt-info">
+            <h4>Fakturační údaje</h4>
+            <li>Jméno: <span>Lukáš Rucký</span></li>
+            <li>IČ: <span>14299348</span></li>
+            <li>Sídlo: <span>Národní třída 733/52, Havířov 73601</span></li>
+        </ul>
+
     </section>
 
     <!-- Footer Section Design -->
