--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="./images/logo_L_modra.png" type="image/x-icon">
     <meta name="description" content="Jsem váš partner pro profesionální webový vývoj a tvorbu moderních, funkčních a atraktivních webových stránek. S pečlivou pozorností k detailům a širokým spektrem technických znalostí vytvářím weby, které nejenže splňují vaše potřeby a očekávání, ale také posilují vaši online přítomnost a pomáhají vám dosáhnout vašich cílů na internetu.">
-    <meta name="keywords" content="Tvorba webových stránek na míru, webové stránky cena, webové stránky na míru, Lukas Rucky, Lukáš Rucký, Lukáš Rucký webové stránky, Lukáš Rucký - Tvorba webových stránek">
+    <meta name="keywords" content="Tvorba webových stránek na míru, webové stránky cena, webové stránky na míru, Lukas Rucky, Lukáš Rucký, Lukáš Rucký webové stránky, Lukáš Rucký - Tvorba webových stránek, webové stránky levně Ostrava">
 </head>
 <body>
     <!-- Header Design -->
     <header class="header">
-        <!-- <a href="#" class="logo">Portfolio</a> -->
         <a href="./index.html" class="logo"><img src="./images/logo_modra.png" alt="Lukáš Rucký - Tvorba webových stránek"></a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
@@ -32,8 +31,8 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Ahoj, jmenuji se</h3>
-            <h1>Lukáš Rucký <span>Webový designér</span></h1>
-            <h3 class="written-text">A jsem <span class="multiple-text"></span></h3>
+            <h1 title="Lukáš Rucký webový designér">Lukáš Rucký</h1>
+            <h3 class="written-text" title="webové stránky levně">A jsem <span class="multiple-text"></span></h3>
             
             <div class="social-media">
                 <a href="#sluzby">Nabídka služeb</a>
@@ -116,21 +115,6 @@
     <!-- Contact Section Design -->
     <section class="kontakt" id="kontakt">
         <h2 class="heading">Kontaktujte <span>Mne!</span></h2>
-
-        <!-- <form action="https://formsubmit.co/ruckylukas@seznam.cz" method="POST">
-            <div class="input-box">
-                <input type="text" placeholder="Celé jméno" name="email" required>
-                <input type="email" placeholder="Emailová adresa" name="email" required>
-            </div>
-            <div class="input-box">
-                <input type="number" placeholder="Telefonní číslo" name="telephone_number" required>
-                <input type="text" placeholder="Předmět" name="Predmet" required>
-                <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="./thankYouPage.html">
-            </div>
-            <textarea name="" id="" cols="30" rows="10" name="textarea" required></textarea>
-            <input type="submit" value="Poslat Zprávu" class="btn">
-        </form> -->
         <h3 class="email-link contact-link">email: <a href="mailto:ruckylukas@seznam.cz">ruckylukas@seznam.cz</a></h3>
         <h3 class="contact-link">tel.: <span><a href="tel:+420777469437">+420 777 469 437</a></span></h3>
 
