pridani kanoickeho odkazu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Lukas Rucky - webový designér</title>
+    <link rel="canonical" href="https://www.lukasrucky.cz">
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="./images/logo_L_modra.png" type="image/x-icon">
