object fit pro obrazek projektu, pridani projektu mojemycka, odebrani Pujcovna Petrvald

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
          <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="./images/pujcovna-petrvald.png" alt="Půjčovna Petřvald - Poslední projekty">
-                <h3>Půjčovna Petřvald</h3>
-                <a href="https://www.pujcovna-petrvald.cz" target="_blank" class="btn">Zobrazit web</a>
+                <img src="./images/mojemycka.png" alt="Mojemyčka Ostrava">
+                <h3>Moje Myčka</h3>
+                <a href="https://malyrudy.github.io/mojeMycka/" target="_blank" class="btn">Zobrazit web</a>
             </div>
             
          </div>
