uprava canonic version

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="./images/logo_L_modra.png" type="image/x-icon">
     <meta name="description" content="Jsem váš partner pro profesionální webový vývoj a tvorbu moderních, funkčních a atraktivních webových stránek. S pečlivou pozorností k detailům a širokým spektrem technických znalostí vytvářím weby, které nejenže splňují vaše potřeby a očekávání, ale také posilují vaši online přítomnost a pomáhají vám dosáhnout vašich cílů na internetu.">
     <meta name="keywords" content="Tvorba webových stránek na míru, webové stránky cena, webové stránky na míru, Lukas Rucky, Lukáš Rucký, Lukáš Rucký webové stránky, Lukáš Rucký - Tvorba webových stránek, webové stránky levně Ostrava">
+    <link rel="canonical" href="https://www.lukasrucky.cz/"> />
 </head>
 <body>
     <!-- Header Design -->
